--- a/talks/talks/2024_04-latte-the_next_paradigm_of_hw_design.jinja2
+++ b/talks/talks/2024_04-latte-the_next_paradigm_of_hw_design.jinja2
@@ -1550,7 +1550,7 @@ class GCDMMIOBlackBox(val w: Int)
       <li class="fragment">Enables high design productivity
         <ul>
           <li class="fragment">Pick the abstraction suitable for a design block</li>
-          <li class="fragment">Mix abstractions at a fine granularity</li>
+{# <li class="fragment">Mix abstractions at a fine granularity</li> #}
           <li class="fragment">Incrementally refine to hit QoR targets: Model &rarr; HLS &rarr; RTL</li>
         </ul>
       </li>
